--- a/style.css
+++ b/style.css
@@ -7,24 +7,52 @@ html {
 }
 
 body {
-  background-color: rgb(181, 189, 225);
+  background-color: rgb(181, 193, 225);
   margin: 0;
   display: grid;
   grid-template-columns: 1fr 4fr 1fr;
-  height: 100%;
+  height: 100vh;
   width: 100%;
+}
+
+h1 {
+  margin: 0 2rem 2rem 2rem;
 }
 
 main {
   grid-column-start: 2;
-  padding: 1rem 2rem;
-  background-color: white;
-  box-shadow: 0 0 1.5rem 0.5rem rgba(54, 52, 101, 0.2);
-  border-left: 2px solid rgba(20, 24, 77, 0.38);
-  border-right: 2px solid rgba(20, 24, 77, 0.38);
-  min-width: 400px;
-  max-width: 600px;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  height: 100vh;
+  width: 460px;
+  box-shadow: 0 0 2rem 0.5rem rgba(54, 52, 101, 0.3);
+  border-left: 1px solid rgba(20, 24, 77, 0.3);
+  border-right: 1px solid rgba(20, 24, 77, 0.3);
+  background-color: rgb(255, 255, 255);
   margin-inline: auto;
+}
+
+#header {
+  background-color: rgb(255, 255, 255);
+  padding-top: 2rem;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+}
+
+#content {
+  padding: 0 2rem;
+  overflow-y: auto; /* Allows scrolling */
+  margin: 0;
+}
+
+#container-modify-list {
+  padding: 1rem 2rem 2rem 2rem;
+  background-color: rgb(255, 255, 255);
+  position: sticky;
+  bottom: 0;
+  z-index: 10;
+  border-top: 2px solid rgb(236, 236, 236);
 }
 
 button {
@@ -34,6 +62,7 @@ button {
   padding: 0.2rem 1rem;
   width: fit-content;
   cursor: pointer;
+  border-radius: 0.125rem;
 }
 
 .btn-primary {
@@ -42,8 +71,13 @@ button {
 }
 
 .btn-secondary {
-  background-color: #e6e7f0;
-  color: black;
+  border: 1px solid rgb(77, 55, 149);
+  background-color: transparent;
+  color: rgb(39, 19, 104);
+}
+
+#btn-remove-done {
+  width: 100%;
 }
 
 #inp-new-todo {
@@ -68,10 +102,9 @@ ul {
 
 #filters {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* Create 3 equal-width columns */
-  gap: 0.3rem;
+  grid-template-columns: repeat(3, 1fr);
   width: 100%; /* Ensure the container takes full width */
-  margin-block: 0.7rem;
+  margin: 0;
 }
 
 #filters input[type="radio"] {
@@ -90,13 +123,41 @@ ul {
   padding: 0.3rem 1rem;
   cursor: pointer;
   text-align: center;
-  background-color: #e6e7f0;
   transition: background-color 0.3s ease;
   font-size: 0.9rem;
   letter-spacing: 0.5px;
+  color: rgb(36, 36, 36);
+  border-bottom: 2px solid rgb(236, 236, 236);
 }
 
 #filters input[type="radio"]:checked + label {
-  background-color: rgb(228, 232, 251);
-  border-bottom: 2px solid black;
+  border-bottom: 3px solid rgb(30, 48, 122);
+  color: black;
+  font-weight: 600;
+}
+
+#list {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 0.5rem;
+}
+
+#list li {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  justify-content: left;
+  align-items: center;
+  padding-top: 0.5rem;
+}
+
+#list li + li {
+  border-top: 1px solid rgb(202, 202, 202);
+}
+
+#list input[type="checkbox"] {
+  height: 1rem;
+  width: 1rem;
+  accent-color: rgb(81, 55, 166);
+  flex-shrink: 0;
 }
