--- a/style.css
+++ b/style.css
@@ -71,10 +71,18 @@ button {
   color: white;
 }
 
+.btn-primary:hover {
+  background-color: rgb(101, 75, 186);
+}
+
 .btn-secondary {
   border: 1px solid rgb(77, 55, 149);
   background-color: transparent;
   color: rgb(39, 19, 104);
+}
+
+.btn-secondary:hover {
+  background-color: rgba(171, 143, 255, 0.195);
 }
 
 #btn-remove-done {
@@ -137,19 +145,24 @@ ul {
   font-weight: 600;
 }
 
+#filters label:hover {
+  color: black;
+  border-bottom: 3px solid rgba(30, 48, 122, 0.242);
+}
+
 #list {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 0.5rem;
+  gap: 0.8rem;
 }
 
 #list li {
   display: flex;
   flex-direction: row;
-  gap: 0.5rem;
+  gap: 0.8rem;
   justify-content: left;
   align-items: center;
-  padding-top: 0.5rem;
+  padding-top: 0.8rem;
 }
 
 #list li + li {
@@ -161,10 +174,16 @@ ul {
   width: 1rem;
   accent-color: rgb(81, 55, 166);
   flex-shrink: 0;
+  margin: 0;
 }
 
 input[type="checkbox"]:checked + label {
   text-decoration: line-through;
+  opacity: 50%;
+}
+
+input[type="checkbox"]:checked {
+  opacity: 50%;
 }
 
 #hint-duplicate {
