--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@ main {
   position: sticky;
   top: 0;
   z-index: 10;
+  max-width: 100vw;
+  box-sizing: border-box;
 }
 
 #content {
@@ -48,12 +50,14 @@ main {
 }
 
 #container-modify-list {
-  padding: 1rem 2rem 2.1rem 2rem;
+  padding: 1.75rem 2rem 2.1rem 2rem;
   background-color: rgb(255, 255, 255);
   position: sticky;
   bottom: 0;
   z-index: 10;
   border-top: 2px solid rgb(236, 236, 236);
+  max-width: 100vw;
+  box-sizing: border-box;
 }
 
 button {
@@ -61,6 +65,7 @@ button {
   height: 1.95rem;
   border: none;
   padding: 0.2rem 1rem;
+  min-width: 5rem;
   width: fit-content;
   cursor: pointer;
   border-radius: 0.125rem;
@@ -91,16 +96,20 @@ button {
 
 #inp-new-todo {
   font-size: 1rem;
-  height: 1.75rem;
+  border: 1px solid rgb(77, 55, 149);
+  border-radius: 0.125rem;
+  height: 1.85rem;
   padding: 0 0.5rem;
-  flex: 1;
+  flex: 1; /* Ensures the input takes available space */
+  min-width: 0; /* prevents flexbox from forcing extra space, which could push the button out */
 }
 
 #add-todo {
   display: flex;
   flex-direction: row;
   gap: 0.5rem;
-  margin-block: 0.7rem 1.3rem;
+  margin-block: 0 1.3rem;
+  width: 100%;
 }
 
 ul {
@@ -189,9 +198,10 @@ input[type="checkbox"]:checked {
 #hint-duplicate {
   background-color: rgb(255, 205, 205);
   padding: 0.65rem 1rem;
+  width: fit-content;
   border: 2px solid rgb(234, 157, 157);
   color: rgb(69, 0, 0);
-  border-radius: 0.15rem;
+  border-radius: 0.125rem;
   position: fixed;
   bottom: 9.5rem;
   left: 50%;
@@ -207,10 +217,12 @@ li input[type="checkbox"] {
 /*_____________________________________________*/
 /*-------------------MOBILE--------------------*/
 
-@media (max-width: 600px) {
+@media (max-width: 480px) {
   body {
     display: grid;
     grid-template-columns: 1fr;
+    background-color: white;
+    font-size: 1.125rem;
   }
 
   main {
@@ -223,5 +235,47 @@ li input[type="checkbox"] {
     box-shadow: none;
     border: none;
     background-color: rgb(255, 255, 255);
+  }
+
+  #inp-new-todo {
+    height: 2.5rem;
+    padding: 0 0.5rem;
+    flex: 1;
+  }
+
+  button {
+    height: 2.7rem;
+    width: fit-content;
+    font-size: 1.125rem;
+  }
+
+  #inp-new-todo {
+    font-size: 1.125rem;
+  }
+
+  #filters label {
+    font-size: 1rem;
+  }
+
+  h1 {
+    margin: 0 1.5rem 1.2rem 1.5rem;
+  }
+
+  #content,
+  #container-modify-list {
+    padding-inline: 1.5rem;
+  }
+
+  #header {
+    padding: 1.5rem 0 0 0;
+  }
+
+  #hint-duplicate {
+    position: fixed;
+    bottom: 11.5rem;
+  }
+
+  #container-modify-list {
+    grid-template-columns: 1fr;
   }
 }
